# netbox-federation

./: CLAUDE.md  DESIGN.md  README.md  pyproject.toml  todo.json
.githooks/: pre-commit
netbox_federation/: __init__.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_federation/api/: serializers.py  urls.py  views.py
netbox_federation/migrations/: 0001_initial.py
netbox_federation/tests/: test_api.py  test_filtersets.py  test_models.py
